# fastapi_message_storage

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/auth/: auth.py  models.py  routes.py
app/debug/: routes.py
app/storage/: interface.py  models.py  routes.py
app/storage/memory/: storage.py
tests/: test_storage_memory.py
